# cmake-inspector

./: .gitignore  Pipfile  README  README.md  algorithms.py  analyze.py  analyze_commits.py  api.py  automatic_command_analyzer.sh  automatic_issue_report.sh  cmake_log.txt  commands.py  commandsfreq.csv  compare_results.py  condition_data_structure.py  csvResult.csv  data_filtering.ipynb  datalayer.py  datastructs.py  extract.py  gather_data_from_github.py  graph.gv  graph_illustration.py  isulad.csv  make_log.txt  parrot.pkl  query.py  requirements.txt  result.json  result.pkl  setup.cfg  test.py  test_against_kde.sh  utils.py  visualizeCommands.py  vmodel.py
KDE_command_analysis/: KDE-ignored-commands-report-1620924345.csv  KDE-report-1620865798.csv  KDE-simple-report-1620927962.csv  accumulateIgnoredCommands.py  command_illustration.py  commandsfreq.csv  createKDEReports.py  createRepoStatusReport.sh  ignored_commands.txt  ignored_commands_final.txt  issued_repos  issued_repos.csv  issued_repos_final.csv  need_to_support_for_top100  repo_list.csv  simpleKDEStatus.py  supportedCommands.csv  visualizeCommands.py
KDE_command_analysis/issues/: KDE_about-distro.txt  KDE_activities-support.txt  KDE_akademy-badges.txt  KDE_akademy-checkin.txt  KDE_akonadi-calendar.txt  KDE_akonadi-contacts.txt  KDE_akonadi-facebook.txt  KDE_akonadi-import-wizard.txt  KDE_akonadi-mime.txt  KDE_akonadi-phabricator-resource.txt  KDE_akonadi-sugarcrm.txt  KDE_akonadi.txt  KDE_akonadiclient.txt  KDE_akonadiconsole.txt  KDE_alkimia.txt  KDE_amarok-history.txt  KDE_amarok.txt  KDE_analitza.txt  KDE_android-builder.txt  KDE_android-qt-creator.txt  KDE_android-qt-mobility.txt  KDE_android-qt-ndk.txt  KDE_android-qt.txt  KDE_android-qt5-qtbase.txt  KDE_android-qtwebkit.txt  KDE_appimage-packaging.txt  KDE_ark.txt  KDE_artikulate-data.txt  KDE_artikulate.txt  KDE_assemblygen.txt  KDE_attica.txt  KDE_babe-qml.txt  KDE_baloo-widgets.txt  KDE_baloo.txt  KDE_binschema.txt  KDE_bluedevil.txt  KDE_bluez-qt.txt  KDE_bodega-webapp-client.txt  KDE_bodega-webapp-manager.txt  KDE_breeze-grub.txt  (+359 more)
algorithms/: algorithms.py  analyze.py  extract.py  query.py  utils.py
data_model/: UNDGraph.py  commands.py  condition_data_structure.py  datastructs.py  vmodel.py
doc/: README.md
doc/Design/: README.md
doc/Neo4j/: README.md
empirical_analysis/: analyze_commits.py  final_projects.csv  find_longest_untouched_commit.py  visualizeCommands.py
grammar/: CMake.g4  CMake.interp  CMake.tokens  CMakeBaseListener.java  CMakeLexer.interp  CMakeLexer.java  CMakeLexer.py  CMakeLexer.tokens  CMakeListener.java  CMakeListener.py  CMakeParser.java  CMakeParser.py  commandsfreq.csv
graph_dots/: KDE_snorenotify  KDE_snoretoast
illustrations/: graph_illustration.py
paper/: .gitignore  Makefile  README.md  StudyDesign.tex  biblio.bib  report.tex
test/: CMakeLists.txt  command_test.py  condition_test.py  include_test.py  result.json  result.pkl  variable_test.py
test/test_cmake_file/test_definition_list/: CMakeLists.txt
test/test_cmake_file/test_directory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test/test_cmake_file/test_directory_definition/: CMakeLists.txt  preprocess.json
test/test_cmake_file/test_include/: CMakeLists.txt
test/test_cmake_file/test_include/cmake/: BuildClient.cmake
test/test_cmake_file/test_include_empty/cmake/: BuildClient.cmake
test/test_cmake_file/test_subdirectory/: CMakeLists.txt
test/test_directory_definition/: CMakeLists.txt
utils/: utils.py
(+6 files in other folders)
