[metadata]
name = DiPiDi
version = 0.0.1
description = DiPiDi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/software-rebels/cmake-inspector/
project_urls =
    Bug Tracker = https://github.com/software-rebels/cmake-inspector/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .